My second commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="container">
         <div class="nav nav-pills">
-            <h1 class="col-sm-4">Project Name</h1>
+            <h1 class="col-sm-4,center">Project Name</h1>
                 <div class="pull-right">
                     <ul class="nav nav-pills">
                       <li class="active"><a href="index.html">All</a></li>
@@ -26,20 +26,22 @@
     
     <div class="container">
         <div class= 'row'>
-            <img class="thumbnail col-sm-4" src="images/pic01.jpg" alt="Picture description" />
-            <img class="thumbnail col-sm-4" src="images/pic01.jpg" alt="Picture description" />
-            <img class="thumbnail col-sm-4" src="images/pic01.jpg" alt="Picture description" />
-            <img class="thumbnail col-sm-12" src="images/pic01.jpg" alt="Picture description" />
-            <img class="thumbnail col-sm-4" src="images/pic01.jpg" alt="Picture description" />
-            <img class="thumbnail col-sm-4" src="images/pic01.jpg" alt="Picture description" />
-            <img class="thumbnail col-sm-4" src="images/pic01.jpg" alt="Picture description" />
+            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
+            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
+            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
+            <p>Seize empower; scalable addelivery killer utilize; integrate proactive empower synergies transparent out-of-the-box: turn-key; systems, widgets platforms morph cross-platform morph. Interactive exploit rss-capable deliverables killer, synergies wikis networkeffects post; e-enable disintermediate interfaces unleash, exploit incentivize? Transition transparent front-end aggregate networkeffects magnetic, web-readiness proactive long-tail seize productize citizen-media, "optimize dot-com." Morph cutting-edge vortals; transition scale cutting-edge mindshare viral;</p>
+            <img class="thumbnail col-sm-12" src="images/pic02.jpg" alt="Picture description" />
+            <p>Seize empower; scalable addelivery killer utilize; integrate proactive empower synergies transparent out-of-the-box: turn-key; systems, widgets platforms morph cross-platform morph. Interactive exploit rss-capable deliverables killer, synergies wikis networkeffects post; e-enable disintermediate interfaces unleash, exploit incentivize? Transition transparent front-end aggregate networkeffects magnetic, web-readiness proactive long-tail seize productize citizen-media, "optimize dot-com." Morph cutting-edge vortals; transition scale cutting-edge mindshare viral;.</p>
+            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
+            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
+            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
         </div>
     </div>
 <footer>
 
-				<div class="pull-right">
+		<div class="pull-right">
 					&copy; ProjectName. All rights reserved.(maybe)
-				</div>
+		</div>
 </footer>
 </body>
 </html>
