My third commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Home Page</title>
   <meta charset="utf-8" />
-<script type="text/javascript" src="/entrepreneurship/test.js"></script>
+<script type="text/javascript" src="/entrepreneurship/getinfo.js"></script>
 <link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
 <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -11,13 +11,11 @@
 <body>
     <header class="container">
         <div class="nav nav-pills">
-            <h1 class="col-sm-4,center">Project Name</h1>
+            <h1 class="col-sm-4,center">Ice Cream Helper</h1>
                 <div class="pull-right">
                     <ul class="nav nav-pills">
                       <li class="active"><a href="index.html">All</a></li>
                       <li><a href="about.html">About</a></li>
-                      <li><a href="x.html">Example</a></li>
-                      <li><a href="x1.html">Example</a></li>
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -26,22 +24,35 @@
     
     <div class="container">
         <div class= 'row'>
-            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
-            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
-            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
-            <p>Seize empower; scalable addelivery killer utilize; integrate proactive empower synergies transparent out-of-the-box: turn-key; systems, widgets platforms morph cross-platform morph. Interactive exploit rss-capable deliverables killer, synergies wikis networkeffects post; e-enable disintermediate interfaces unleash, exploit incentivize? Transition transparent front-end aggregate networkeffects magnetic, web-readiness proactive long-tail seize productize citizen-media, "optimize dot-com." Morph cutting-edge vortals; transition scale cutting-edge mindshare viral;</p>
             <img class="thumbnail col-sm-12" src="images/pic02.jpg" alt="Picture description" />
-            <p>Seize empower; scalable addelivery killer utilize; integrate proactive empower synergies transparent out-of-the-box: turn-key; systems, widgets platforms morph cross-platform morph. Interactive exploit rss-capable deliverables killer, synergies wikis networkeffects post; e-enable disintermediate interfaces unleash, exploit incentivize? Transition transparent front-end aggregate networkeffects magnetic, web-readiness proactive long-tail seize productize citizen-media, "optimize dot-com." Morph cutting-edge vortals; transition scale cutting-edge mindshare viral;.</p>
-            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
-            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
-            <img class="thumbnail col-sm-4" src="images/pic03.jpg" alt="Picture description" />
+                <ul><center>Ice Cream is a frozen food used as a snack or dessert. Most of time are made from dairy products. Typically sweetened.</center></ul>
+            <img class="thumbnail col-sm-4" src="images/design1.jpg" alt="Original design of the product" />
+            <img class="thumbnail col-sm-4" src="images/design2.JPG" alt="The second design of the product" />
+            <img class="thumbnail col-sm-4" src="images/design3.jpg" alt="The final design of the product" />
+            <ul>
+                <li>This first design was a basic base cylinder design. It does not work as it is used as a base to make further changes. There were many problems with this design. Many surrounded the fact that there was no way to get ice cream out of the cylinder.</li>
+                <li>This second design improves from the first and made pushing the ice into a container easier. This was achieved with a handle which can help to twist hardened ice-cream. At the bottom of the container, there are sharp edges (Can't harm human) for easy cutting of the ice cream</li>
+                <li>This Final Design includes an adjustable length. If extended the product it can get a full 2 inches of an ice cream cylinder, the extended length is 1.5 inches, it to can give people more options on the amount of ice-cream they need because not all ice-cream cone have the same amount of space. (The original length is .5 inches.) </li>
+            </ul>
+            <img class="thumbnail col-sm-4" src="images/htu1.jpg" alt="picture of an ice-cream cone" />
+            <img class="thumbnail col-sm-4" src="images/design3.jpg" alt="Picture of the final product" />
+            <img class="thumbnail col-sm-4" src="images/htu3.jpg" alt="picture of product on cone" />
         </div>
     </div>
 <footer>
-
-		<div class="pull-right">
-					&copy; ProjectName. All rights reserved.(maybe)
-		</div>
+		<section class="container">
+				    <div class= "row">
+                        <a href="https://twitter.com/CreamHelper" target="_blank" >Twitter</a>
+                    </div>
+				</section>
+				<section class="container">
+				    <div class= "row">
+                        <a href="https://twitter.com/CreamHelper" target="_blank" ><img class="col-sm-1" src="images/twitter.png" alt="Picture of twitter"></img></a>
+                    </div>
+				</section>
+				<div class="pull-right">
+					&copy; Ice-Cream Helper By Leo Lee & Andrew Huynh. All rights reserved.
+		        </div>
 </footer>
 </body>
 </html>
