--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,11 @@
 <body>
     <header class="container">
         <div class="nav nav-pills">
-            <h1 class="col-sm-4">LeoLee</h1>
+            <h1 class="col-sm-4">Ice Cream Helper</h1>
                 <div class="pull-right">
                     <ul class="nav nav-pills">
                       <li><a href="index.html">All</a></li>
                       <li><a href="about.html">About</a></li>
-                      <li><a href="x.html">Example</a></li>
-                      <li><a href="x1.html">Example</a></li>
                       <li class='active'><a href="Lee_contact.html">Contact Me</a></li>
                     </ul>
                 </div>
@@ -23,25 +21,24 @@
 <div class='container'>
     <div class='jumbotron'>
         <center>
-            <a href="mailto:LeoLeecalifornia@gmail.com"><h1><strong>Business Email: LeoLeecalifornia@gmail.com</strong></h1></a>
+            <a href="mailto:icecreamhelperca@gmail.com"><h1><strong>Business Email: Ice Cream Helper</strong></h1></a>
         </center>
     </div>
 </div>
-
-    <footer>
-                <section class="container">
+<footer>
+		<section class="container">
 				    <div class= "row">
-                        <a href="https://twitter.com/LeoLeeUS" target="_blank" >Twitter</a>
+                        <a href="https://twitter.com/CreamHelper" target="_blank" >Twitter</a>
                     </div>
 				</section>
 				<section class="container">
 				    <div class= "row">
-                        <a href="https://twitter.com" target="_blank" ><img class="col-sm-1" src="images/twitter.png" alt="Picture of twitter"></img></a>
+                        <a href="https://twitter.com/CreamHelper" target="_blank" ><img class="col-sm-1" src="images/twitter.png" alt="Picture of twitter"></img></a>
                     </div>
 				</section>
 				<div class="pull-right">
-					&copy; Untitled. All rights reserved.
-				</div>
-    </footer>
+					&copy; Ice-Cream Helper By Leo Lee & Andrew Huynh. All rights reserved.
+		        </div>
+</footer>
 </body>
 </html>
